File Browser Mismatches File Name and Thumbnail #22133

Closed
opened 2010-04-23 04:59:27 +02:00 by Brian Staub · 6 comments

%%%Rev 28364 and previous

the File Browser Mismatches File Names and Thumbnails after switching between folders and various viewing options (Icon, List, Date Modified, etc.)... can't figure out what order of events triggers it.

in the attached image, some of the file names clearly don't match the Thumbnail... such as the filename "hairless chimp" which have thumbnails that clearly aren't hairless chimps. the filename is correct (because it opens the correct image), just the thumbnail is wrong.

thanks devs

brian

system specs:
OS X 10.6.3
17" 'Unibody' MacbookPro, 2.66 GHz Intel Core 2 Duo w/ 6MB shared L2 cache on 1.07 GHz FSB
4 GB DDR3 SDRAM
128 GB Solid State Drive
NVIDIA GeForce 9600M GT discrete graphics w/ 512 MB VRAM and NVIDIA GeForce 9400M integrated graphics w/ 256 MB VRAM, 1920 x 1200 native resolution%%%

%%%Rev 28364 and previous the File Browser Mismatches File Names and Thumbnails after switching between folders and various viewing options (Icon, List, Date Modified, etc.)... can't figure out what order of events triggers it. in the attached image, some of the file names clearly don't match the Thumbnail... such as the filename "hairless chimp" which have thumbnails that clearly aren't hairless chimps. the filename is correct (because it opens the correct image), just the thumbnail is wrong. thanks devs brian system specs: OS X 10.6.3 17" 'Unibody' MacbookPro, 2.66 GHz Intel Core 2 Duo w/ 6MB shared L2 cache on 1.07 GHz FSB 4 GB DDR3 SDRAM 128 GB Solid State Drive NVIDIA GeForce 9600M GT discrete graphics w/ 512 MB VRAM and NVIDIA GeForce 9400M integrated graphics w/ 256 MB VRAM, 1920 x 1200 native resolution%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Assigning to Andrea..

I guess it may still be a bit difficult to reproduce without more info, can you perhaps separate 3 or 4 of those images into a folder to test with, to see if it mixes those up too? If so, are you able to attach them to this report?%%%

%%%Assigning to Andrea.. I guess it may still be a bit difficult to reproduce without more info, can you perhaps separate 3 or 4 of those images into a folder to test with, to see if it mixes those up too? If so, are you able to attach them to this report?%%%
Author

%%%it happens with every folder of images, not just the one i sent a screenshot of. i recreated this by choosing File > Open, Thumbnail View, Sort by Date Modified, Navigate between folders a few times

thanks

brian%%%

%%%it happens with every folder of images, not just the one i sent a screenshot of. i recreated this by choosing File > Open, Thumbnail View, Sort by Date Modified, Navigate between folders a few times thanks brian%%%
Member

%%%Thanks for reporting, the sorting of the filelist was mismatched with the thumbnail order.

fixed in rev. 28512
%%%

%%%Thanks for reporting, the sorting of the filelist was mismatched with the thumbnail order. fixed in rev. 28512 %%%
Member

%%%Closing report.
%%%

%%%Closing report. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#22133
No description provided.