[#22133] File Browser Mismatches File Name and Thumbnail * sorting of file list interfered with thumbnail order, stopping job while sorting now.